ajustes swagger e nomeclaturas
